# llm-gtd-wiki

./: .gitignore  CLAUDE.md  LICENSE  README.md
docs/: architecture.md  change-review-workflow.md  claude-project.md  connector-oauth.md  laptop-sync.md  setup.md
infra/: cognito.tf  digest.tf  iam.tf  lambda.tf  main.tf  outputs.tf  s3.tf  terraform.tfvars.example  variables.tf
scripts/: seed_wiki.sh  wiki-pull.sh  wiki-push.sh  wiki-sync.env.example
server/: pyproject.toml  run_local.py
server/scripts/: package.sh
server/src/llm_gtd_wiki/: __init__.py  app.py  auth.py  config.py  digest.py  oauth_shim.py  storage.py
server/tests/: test_storage.py
template/: BOOTSTRAP.md  CLAUDE.md  project-instructions.md  settings.json.example
template/wiki/: accomplishments.md  idle.md  inbox.md  index.md  log.md  radar.md  routines.md  someday.md
template/wiki/archive/: README.md
template/wiki/areas/: admin.md  health.md  home.md  work.md
template/wiki/projects/: README.md
template/wiki/raw/: README.md
