[project]
name = "llm-gtd-wiki"
version = "0.0.1"
description = "MCP server exposing a GTD Life OS wiki stored in S3, for use as a Claude custom connector."
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.2.0",
    "starlette>=0.37",
    "mangum>=0.17",
    "pyjwt[crypto]>=2.8",
    "boto3>=1.34",       # used from Phase 1 (S3 storage); harmless in Phase 0
]

[project.optional-dependencies]
dev = [
    "uvicorn>=0.30",
    "pytest>=8",
    "moto[s3]>=5",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
